--- a/index.html
+++ b/index.html
@@ -116,7 +116,8 @@
 				<div class="social-links">
 					<img id="social_img" src="follow.PNG">
 					<h3>Find me at:</h3>
-
+					<a target="_blank" href="mailto:mahaktripathi5@gmail.com">Email: mahaktripathi5@gmail.com</a>
+					<br>
 					<a target="_blank" href="https://www.linkedin.com/in/mahak-tripathi-361171170/">Linkedin: @Mahak Tripathi</a>
 					<br>
 					<a target="_blank" href="https://github.com/trip-mahak">Github: @trip-mahak</a>
@@ -127,7 +128,7 @@
 					<br>
 					<a target="_blank" href="https://www.hackerrank.com/mahak_tripathi">Hackerrank: @mahak_tripathi</a>
 					<br>
-					<a target="_blank" href="mailto:tripathimskn@gmail.com">Email: mahaktripathi5@gmail.com</a>
+					
 				</div>
 			</div>
 
